--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.16.1",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.12",
+    "dlv": "^1.1.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
@@ -13,7 +14,8 @@
     "react-app-rewired": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-spring": "^8.0.20"
   },
   "scripts": {
     "start": "react-app-rewired start",
